# gnome-themes-standard

./: Makefile.am  NEWS  configure.ac  gnome-themes-standard.doap
po/: LINGUAS  POTFILES.in  POTFILES.skip  af.po  an.po  ar.po  as.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fy.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  it.po  ja.po  km.po  kn.po  ko.po  lt.po  lv.po  ml.po  (+25 more)
src/: Makefile.am  adwaita_engine.c  adwaita_utils.c  adwaita_utils.h  engine.symbols
themes/: Makefile.am  a11y-base.css
themes/Adwaita/: Makefile.am  index.theme.in
themes/Adwaita/backgrounds/: Makefile.am  adwaita-timed.xml  adwaita.xml.in.in
themes/Adwaita/gtk-2.0/: Makefile.am  gtkrc
themes/Adwaita/gtk-3.0/: Makefile.am  assets.txt  gnome-applications.css  gtk-backgrounds.css  gtk-dark.css  gtk-main-common.css  gtk-main-dark.css  gtk-main.css  gtk-scrollbar-experiments.css  gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets-backgrounds.css  gtk-widgets-borders-dark.css  gtk-widgets-borders.css  gtk-widgets-dark-overrides.css  gtk-widgets-window-unfocused.css  gtk-widgets.css  gtk.css  gtk.gresource.xml  gtkrc  render-assets.sh
themes/Adwaita/gtk-3.0/assets/: Makefile.am
themes/Adwaita/gtk-3.0/borders/: Makefile.am
themes/Adwaita/metacity-1/: Makefile.am  metacity-theme-2.xml  metacity-theme-3.xml
themes/AdwaitaLowContrast/: Makefile.am  index.theme.in
themes/AdwaitaLowContrast/gtk-3.0/: Makefile.am  gtk.css
themes/HighContrast/: Makefile-icons.am  Makefile.am  create-makefiles.sh  index.theme.in
themes/HighContrast/gtk-2.0/: Makefile.am
themes/HighContrast/gtk-3.0/: Makefile.am  gtk.css  gtk.gresource.xml
themes/HighContrast/icons/: Makefile.am  index.theme.in
themes/HighContrast/icons/48x48/: Makefile.am
themes/HighContrast/icons/48x48/animations/: Makefile.am  process-working.xcf
themes/HighContrast/icons/48x48/stock/: Makefile.am
themes/HighContrast/icons/scalable/: Makefile.am
themes/HighContrast/icons/scalable/actions/: Makefile.am
themes/HighContrast/icons/scalable/actions-extra/: Makefile.am
themes/HighContrast/icons/scalable/apps/: Makefile.am
themes/HighContrast/icons/scalable/apps-extra/: Makefile.am
themes/HighContrast/icons/scalable/categories/: Makefile.am
themes/HighContrast/icons/scalable/categories-extra/: Makefile.am
themes/HighContrast/icons/scalable/devices/: Makefile.am
themes/HighContrast/icons/scalable/devices-extra/: Makefile.am
themes/HighContrast/icons/scalable/emblems/: Makefile.am
themes/HighContrast/icons/scalable/emblems-extra/: Makefile.am
themes/HighContrast/icons/scalable/emotes/: Makefile.am
themes/HighContrast/icons/scalable/emotes-extra/: Makefile.am
themes/HighContrast/icons/scalable/mimetypes/: Makefile.am
themes/HighContrast/icons/scalable/mimetypes-extra/: Makefile.am
themes/HighContrast/icons/scalable/places/: Makefile.am
themes/HighContrast/icons/scalable/places-extra/: Makefile.am
themes/HighContrast/icons/scalable/status/: Makefile.am
themes/HighContrast/icons/scalable/status-extra/: Makefile.am
themes/HighContrastInverse/: Makefile.am  index.theme.in
themes/HighContrastInverse/gtk-2.0/: Makefile.am
themes/HighContrastInverse/gtk-3.0/: Makefile.am  gtk.css  gtk.gresource.xml
themes/HighContrastInverse/icons/: Makefile.am
themes/HighContrastInverse/icons/48x48/: Makefile.am
themes/HighContrastInverse/icons/48x48/stock/: Makefile.am
themes/LowContrast/: Makefile.am  index.theme.in
themes/LowContrast/gtk-2.0/: Makefile.am
themes/LowContrast/gtk-3.0/: Makefile.am
themes/LowContrast/icons/: Makefile.am  index.theme
themes/LowContrast/icons/48x48/: Makefile.am
themes/LowContrast/icons/48x48/actions/: Makefile.am
themes/LowContrast/icons/48x48/apps/: Makefile.am
themes/LowContrast/icons/48x48/categories/: Makefile.am
themes/LowContrast/icons/48x48/devices/: Makefile.am
themes/LowContrast/icons/48x48/stock/: Makefile.am
