SUBDIRS = assets borders

themedir = $(datadir)/themes/Adwaita/gtk-3.0
theme_DATA = 		\
	gnome-applications.css \
	gtk.css 	\
	gtk-dark.css	\
	gtk-scrollbar-experiments.css	\
	gtk-widgets.css \
	gtk-widgets-backgrounds.css \
	gtk-widgets-borders.css \
	gtk-widgets-borders-dark.css \
	gtk-widgets-dark-overrides.css \
	gtk-widgets-assets.css \
	gtk-widgets-assets-dark.css \
	gtk-widgets-window-unfocused.css \
	settings.ini

EXTRA_DIST = $(theme_DATA)

-include $(top_srcdir)/git.mk
