assetsdir = $(datadir)/themes/Adwaita/gtk-3.0/assets
assets_DATA = 		\
	checkbox-checked.png \
	checkbox-checked-alt.png \
	checkbox-checked-insensitive.png \
	checkbox-checked-backdrop.png \
	checkbox-checked-backdrop-insensitive.png \
	checkbox-unchecked.png \
	checkbox-unchecked-alt.png \
	checkbox-unchecked-insensitive.png \
	checkbox-unchecked-backdrop.png \
	checkbox-unchecked-backdrop-insensitive.png \
	checkbox-mixed.png \
	checkbox-mixed-alt.png \
	checkbox-mixed-insensitive.png \
	checkbox-mixed-backdrop.png \
	checkbox-mixed-backdrop-insensitive.png \
	radio-checked.png \
	radio-checked-alt.png \
	radio-checked-insensitive.png \
	radio-checked-backdrop.png \
	radio-checked-backdrop-insensitive.png \
	radio-unchecked.png \
	radio-unchecked-alt.png \
	radio-unchecked-insensitive.png \
	radio-unchecked-backdrop.png \
	radio-unchecked-backdrop-insensitive.png \
	radio-mixed.png \
	radio-mixed-alt.png \
	radio-mixed-insensitive.png \
	radio-mixed-backdrop.png \
	radio-mixed-backdrop-insensitive.png \
	checkbox-checked-dark.png \
	checkbox-checked-alt-dark.png \
	checkbox-checked-insensitive-dark.png \
	checkbox-checked-backdrop-dark.png \
	checkbox-checked-backdrop-insensitive-dark.png \
	checkbox-unchecked-dark.png \
	checkbox-unchecked-alt-dark.png \
	checkbox-unchecked-insensitive-dark.png \
	checkbox-unchecked-backdrop-dark.png \
	checkbox-unchecked-backdrop-insensitive-dark.png \
	checkbox-mixed-dark.png \
	checkbox-mixed-alt-dark.png \
	checkbox-mixed-insensitive-dark.png \
	checkbox-mixed-backdrop-dark.png \
	checkbox-mixed-backdrop-insensitive-dark.png \
	radio-checked-dark.png \
	radio-checked-alt-dark.png \
	radio-checked-insensitive-dark.png \
	radio-checked-backdrop-dark.png \
	radio-checked-backdrop-insensitive-dark.png \
	radio-unchecked-dark.png \
	radio-unchecked-alt-dark.png \
	radio-unchecked-insensitive-dark.png \
	radio-unchecked-backdrop-dark.png \
	radio-unchecked-backdrop-insensitive-dark.png \
	radio-mixed-dark.png \
	radio-mixed-alt-dark.png \
	radio-mixed-insensitive-dark.png \
	radio-mixed-backdrop-dark.png \
	radio-mixed-backdrop-insensitive-dark.png \
	menuitem-checkbox-checked.svg \
	menuitem-checkbox-checked-insensitive.svg \
	menuitem-checkbox-checked-selected.svg \
	menuitem-checkbox-mixed.svg \
	menuitem-checkbox-mixed-insensitive.svg \
	menuitem-radio-checked.svg \
	menuitem-radio-checked-insensitive.svg \
	menuitem-radio-checked-selected.svg \
	menuitem-radio-mixed.svg \
	menuitem-radio-mixed-insensitive.svg \
	resize-grip.svg \
	scale-slider-horizontal.svg \
	scale-slider-horizontal-unfocused.svg \
	scale-slider-horizontal-dark.svg \
	scale-slider-horizontal-insensitive.svg \
	scale-slider-horizontal-insensitive-unfocused.svg \
	scale-slider-horizontal-insensitive-dark.svg \
	scale-slider-vertical.svg \
	scale-slider-vertical-unfocused.svg \
	scale-slider-vertical-dark.svg \
	scale-slider-vertical-insensitive.svg \
	scale-slider-vertical-insensitive-unfocused.svg \
	scale-slider-vertical-insensitive-dark.svg \
	scale-slider-marks-above-horizontal.svg \
	scale-slider-marks-above-horizontal-unfocused.svg \
	scale-slider-marks-above-horizontal-dark.svg \
	scale-slider-marks-above-horizontal-insensitive.svg \
	scale-slider-marks-above-horizontal-insensitive-unfocused.svg \
	scale-slider-marks-above-horizontal-insensitive-dark.svg \
	scale-slider-marks-above-vertical.svg \
	scale-slider-marks-above-vertical-unfocused.svg \
	scale-slider-marks-above-vertical-dark.svg \
	scale-slider-marks-above-vertical-insensitive.svg \
	scale-slider-marks-above-vertical-insensitive-unfocused.svg \
	scale-slider-marks-above-vertical-insensitive-dark.svg \
	scale-slider-marks-below-horizontal.svg \
	scale-slider-marks-below-horizontal-unfocused.svg \
	scale-slider-marks-below-horizontal-dark.svg \
	scale-slider-marks-below-horizontal-insensitive.svg \
	scale-slider-marks-below-horizontal-insensitive-unfocused.svg \
	scale-slider-marks-below-horizontal-insensitive-dark.svg \
	scale-slider-marks-below-vertical.svg \
	scale-slider-marks-below-vertical-unfocused.svg \
	scale-slider-marks-below-vertical-dark.svg \
	scale-slider-marks-below-vertical-insensitive.svg \
	scale-slider-marks-below-vertical-insensitive-unfocused.svg \
	scale-slider-marks-below-vertical-insensitive-dark.svg \
	sidebar-radio-checked.svg \
	sidebar-radio-checked-dark.svg \
	sidebar-radio-prelight.svg \
	sidebar-radio-selected.svg \
	sidebar-radio-selected-dark.svg \
	sidebar-radio-selected-prelight.svg

EXTRA_DIST = $(assets_DATA)
