bordersdir = $(datadir)/themes/Adwaita/gtk-3.0/borders
borders_DATA = 		\
	button-border-focused.svg \
	button-border.svg \
	generic-border-focused.svg \
	generic-border.svg \
	primary-toolbar-button-border-focused.svg \
	primary-toolbar-button-border.svg \
	primary-toolbar-generic-border-focused.svg \
	primary-toolbar-generic-border.svg

EXTRA_DIST = $(borders_DATA)
