bordersdir = $(datadir)/themes/Adwaita/gtk-3.0/borders
borders_DATA = 		\
	button-border-focused.svg \
	button-border-focused-dark.svg \
	button-border.svg \
	button-border-dark.svg \
	generic-border-focused.svg \
	generic-border-focused-dark.svg \
	generic-border.svg \
	generic-border-dark.svg \
	generic-border-unfocused.svg \
	primary-toolbar-button-border-focused.svg \
	primary-toolbar-button-border-focused-dark.svg \
	primary-toolbar-button-border.svg \
	primary-toolbar-button-border-dark.svg \
	primary-toolbar-generic-border-focused.svg \
	primary-toolbar-generic-border-focused-dark.svg \
	primary-toolbar-generic-border.svg \
	primary-toolbar-generic-border-dark.svg \
	primary-toolbar-generic-border-unfocused.svg

EXTRA_DIST = $(borders_DATA)
