themedir = $(datadir)/icons/HighContrast
size = scalable
context = places

icondir = $(themedir)/$(size)/$(context)

icon_DATA =					\
	folder.svg				\
	folder-remote.svg			\
	network-server.svg			\
	network-workgroup.svg			\
	start-here.svg				\
	user-bookmarks.svg			\
	user-desktop.svg			\
	user-home.svg				\
	user-trash.svg

EXTRA_DIST =					\
	$(icon_DATA)

uninstall-am: uninstall-iconDATA
