themedir = $(datadir)/icons/LowContrast
size = 48x48
context = apps

icondir = $(themedir)/$(size)/$(context)

icon_DATA = \
	bluetooth.png \
	gnome-power-manager.png \
	multimedia-volume-control.png \
	preferences-desktop-accessibility.png \
	preferences-desktop-display.png \
	preferences-desktop-keyboard.png \
	preferences-desktop-locale.png \
	preferences-desktop-wallpaper.png \
	preferences-system-network.png \
	preferences-system-time.png \
	system-users.png

EXTRA_DIST = \
	$(icon_DATA)

MAINTAINERCLEANFILES = \
	Makefile.in

uninstall-am: uninstall-iconDATA
