themedir = $(datadir)/icons/LowContrast
size = 48x48
context = stock

icondir = $(themedir)/$(size)/$(context)

icon_DATA = \
	application-exit.png \
	audio-input-microphone.png \
	audio-volume-high.png \
	audio-volume-low.png \
	audio-volume-medium.png \
	audio-volume-muted.png \
	dialog-error.png \
	dialog-information.png \
	dialog-question.png \
	dialog-warning.png \
	document-new.png \
	document-open.png \
	document-print.png \
	document-print-preview.png \
	document-properties.png \
	document-revert.png \
	document-save-as.png \
	document-save.png \
	drive-harddisk.png \
	edit-clear.png \
	edit-copy.png \
	edit-cut.png \
	edit-delete.png \
	edit-find.png \
	edit-find-replace.png \
	edit-paste.png \
	edit-redo.png \
	edit-undo.png \
	format-justify-center.png \
	format-justify-fill.png \
	format-justify-left.png \
	format-justify-right.png \
	format-text-bold.png \
	format-text-italic.png \
	format-text-strikethrough.png \
	format-text-underline.png \
	go-bottom.png \
	go-down.png \
	go-first.png \
	go-home.png \
	go-jump.png \
	go-last.png \
	go-next.png \
	go-previous.png \
	go-top.png \
	go-up.png \
	gtk-apply.png \
	gtk-cancel.png \
	gtk-convert.png \
	gtk-dnd-multiple.png \
	gtk-dnd.png \
	gtk-edit.png \
	gtk-index.png \
	gtk-no.png \
	gtk-ok.png \
	gtk-preferences.png \
	gtk-select-color.png \
	gtk-select-font.png \
	gtk-undelete.png \
	gtk-yes.png \
	help-about.png \
	help-contents.png \
	image-missing.png \
	list-add.png \
	list-remove.png \
	media-eject.png \
	media-floppy.png \
	media-optical.png \
	media-playback-pause.png \
	media-playback-start.png \
	media-playback-stop.png \
	media-record.png \
	media-seek-backward.png \
	media-seek-forward.png \
	media-skip-backward.png \
	media-skip-forward.png \
	process-stop.png \
	system-lock-screen.png \
	system-log-out.png \
	system-run.png \
	system-search.png \
	tools-check-spelling.png \
	view-refresh.png \
	view-sort-ascending.png \
	view-sort-descending.png \
	window-close.png \
	zoom-fit-best.png \
	zoom-in.png \
	zoom-original.png \
	zoom-out.png

EXTRA_DIST = \
	$(icon_DATA)

MAINTAINERCLEANFILES = \
	Makefile.in

uninstall-am: uninstall-iconDATA
